[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "avocado_job_mail"
version = "1.0"
description = "Avocado Pre/Post Job Mail Notification"

[project.entry-points."avocado.plugins.init"]
avocado_job_mail = "avocado_job_mail:MailInit"

[project.entry-points."avocado.plugins.job.prepost"]
avocado_job_mail = "avocado_job_mail:Mail"

[tool.setuptools]
py-modules = ["avocado_job_mail"]
